# english-conversation

./: README.md
frontend/: .gitignore  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: apiService.ts
frontend/src/components/: AudioRecorder.tsx  Conversation.tsx  SettingsPanel.tsx
frontend/src/hooks/: useAudioRecorder.ts
frontend/src/types/: index.ts
server/: pyproject.toml
server/scripts/: main.py
